Archive2/aa/a89b2202a1504a/output
main.cpp:74:5: error: no matching function for call to 'for_each'
    for_each(std::begin(vec), std::end(vec), for_each<Printer>);
    ^~~~~~~~
main.cpp:32:3: note: candidate function template not viable: requires single argument 'obj', but 3 arguments were provided
F for_each(T& obj){
  ^
1 error generated.
